@@ -4,16 +4,16 @@ from __future__ import unicode_literals
 
 import json
 
-from django.test import TestCase, override_settings
-from django.core.urlresolvers import reverse
-from django.core import mail
 from django.contrib.auth import get_user_model
-
+from django.core import mail
+from django.core.urlresolvers import reverse
+from django.test import TestCase, override_settings
 from taggit.models import Tag
 
 from wagtail.tests.utils import WagtailTestUtils
-from wagtail.wagtailcore.models import Page
+from wagtail.wagtailadmin.site_summary import PagesSummaryItem
 from wagtail.wagtailadmin.utils import send_mail
+from wagtail.wagtailcore.models import Page, Site
 
 from django.core.urlresolvers import reverse_lazy
 from wagtail.wagtailadmin.menu import MenuItem
@@ -67,6 +67,40 @@ class TestHome(TestCase, WagtailTestUtils):
         self.client.login(username='snowman', password='password')
         response = self.client.get(reverse('wagtailadmin_home'))
         self.assertEqual(response.status_code, 200)
+
+
+class TestPagesSummary(TestCase, WagtailTestUtils):
+    def setUp(self):
+        self.login()
+
+    def get_request(self):
+        """
+        Get a Django WSGI request that has been passed through middleware etc.
+        """
+        return self.client.get('/admin/').wsgi_request
+
+    def test_page_summary_single_site(self):
+        request = self.get_request()
+        root_page = request.site.root_page
+        link = '<a href="{}">'.format(reverse('wagtailadmin_explore', args=[root_page.pk]))
+        page_summary = PagesSummaryItem(request)
+        self.assertIn(link, page_summary.render())
+
+    def test_page_summary_multiple_sites(self):
+        Site.objects.create(
+            hostname='example.com',
+            root_page=Page.objects.get(pk=1))
+        request = self.get_request()
+        link = '<a href="{}">'.format(reverse('wagtailadmin_explore_root'))
+        page_summary = PagesSummaryItem(request)
+        self.assertIn(link, page_summary.render())
+
+    def test_page_summary_zero_sites(self):
+        Site.objects.all().delete()
+        request = self.get_request()
+        link = '<a href="{}">'.format(reverse('wagtailadmin_explore_root'))
+        page_summary = PagesSummaryItem(request)
+        self.assertIn(link, page_summary.render())
 
 
 class TestEditorHooks(TestCase, WagtailTestUtils):
